--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,23 @@
 <!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+<view class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1576014131795-d440191a8e8b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1951&q=80);">
+  <view class="container">
+ </view>
 </view>
+
+<view class="divider"></view>
+<view class="row">
+  <view class="card-product" wx:for="{{families}}">
+    <view  class='h2'>name</view>
+    <view class='p'>description</view>
+  </view>
+  <view wx:for="{{families.length%2}}" class="card-product-1"></view>
+</view>
+
+
+
+
+<!-- <view  wx:for="{{users}}" wx:for-item="user"> -->
+  <!-- <view data-id="{{user.id}}" bindtap="goToShow" class="card-product"> -->
+  
+  <!-- </view>
+</view> -->
