--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,13 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
+<!--pages/testIndex/testIndex.wxml-->
+<view class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1576014131795-d440191a8e8b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1951&q=80);">
+  <view class="container">
+ </view>
+</view>
+<view class="divider"></view>
+<view class="row">
+  <view class="card-product" wx:for="{{hosts}}" wx:for-item="host" data-index="{{host.id}}" bindtap="goToShow"> 
+   <view class='h2'>{{host.id}}</view>
+    <view class='p'>{{host.description}}</view>
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+  <view wx:for="{{hosts.length%2}}" class="card-product-1"></view>
 </view>
