--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,35 @@
-/**index.wxss**/
-.userinfo {
+.banner {
+  background-color: white;
+  background-size: cover;
+  background-position: center;
+  padding: 120rpx 30rpx;
+  height: 10vh;
+}
+.divider {
+  height:120rpx;
+  background-color: white;
+}
+.card-product {
+  height:303rpx;
+  width: 252rpx;
+  background:rgb(250, 250, 250);
+  box-shadow: 2rpx 2rpx 5rpx rgba(0,0,0,0.1);
+  justify-content: center;
+  padding: 16px;
+  margin: 8px;
+  border-radius: 4px;
+}
+.card-product-1 {
+  height:303rpx;
+  width: 252rpx;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: flex-end;
+  padding: 16px;
+  margin: 8px;
+  border-radius: 4px;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
