--- a/pages/createhost/createhost.wxml
+++ b/pages/createhost/createhost.wxml
@@ -1,6 +1,9 @@
 
 <view class="form">
 <form bindsubmit="formSubmit" bindreset="formReset">
+<view class="section0">
+<input name="name" placeholder="Type in your name..." />
+</view>
 <view class="section1">
 <input name="description" placeholder="Type in your description..." />
 </view>
@@ -15,6 +18,12 @@
 </view>
 <view class="section5">
 <input name="age" placeholder="Type in your age..." />
+</view>
+<view class="section6">
+<input name="url" placeholder="Type in your url..." />
+</view>
+<view class="section7">
+<input name="image_url" placeholder="Type in your image url..." />
 </view>
 <view class="btn-area">
 <button type="primary" form-type="submit">Submit</button>
