--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -6,16 +6,9 @@
 <view class="divider"></view>
 <view class="row">
   <view class="card-product" wx:for="{{hosts}}" wx:for-item="host" data-index="{{host.id}}" bindtap="goToShow"> 
-   <view class='h2'>{{host.id}}</view>
+   <view class='h2'>{{host.category}}</view>
     <view class='p'>{{host.description}}</view>
   </view>
   <view wx:for="{{hosts.length%2}}" class="card-product-1"></view>
 </view>
 
-<view class="bottom-navbar">
-  <view class="nav-content">
-    <navigator class= "icon">Home</navigator> 
-    <navigator class="icon-center">Messages</navigator> 
-    <navigator class="icon">Profile</navigator> 
-  </view>
-</view>
