--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -2,19 +2,13 @@
 
 <image class="img" src= "https://picsum.photos/seed/picsum/200/300"/>
 
-<view class="h2">Name</view>
+<view class="h2">{{host.category}}</view>
 <view class="row">
   <view class="host-card">
-    <view class="p">Description</view>    
+    <view class="p">{{host.description}}</view>  
+    <view class="p">{{host.location}}</view> 
+    <view class="p">{{host.age}}</view>
   </view>
 </view>
+<button class="btn-orange" bindtap="goToBook">Book</button>
 
-<button class="btn-orange" bindtap="setPlain">Book</button>
-
-<view class="bottom-navbar">
-  <view class="nav-content">
-    <navigator class= "icon">Home</navigator> 
-    <navigator class="icon-center">Messages</navigator> 
-    <navigator class="icon">Profile</navigator> 
-  </view>
-</view>
