--- a/pages/createhost/createhost.wxml
+++ b/pages/createhost/createhost.wxml
@@ -1,6 +1,12 @@
 
 <view class="form">
 <form bindsubmit="formSubmit" bindreset="formReset">
+
+  <picker bindchange="bindPickerChange" value="{{array}}" range="{{array}}">
+    <view class="picker">
+      当前选择：{{array[key]}}
+    </view>
+  </picker>
 <view class="section0">
 <input name="name" placeholder="Type in your name..." />
 </view>
@@ -13,6 +19,7 @@
 <view class="section3">
 <input name="category" placeholder="Type in your category..." />
 </view>
+
 <view class="section4">
 <input name="gender" placeholder="Type in your gender..." />
 </view>
