--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,7 +1,13 @@
 <!--pages/testIndex/testIndex.wxml-->
-<view class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1576014131795-d440191a8e8b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1951&q=80);">
-  <view class="container">
- </view>
+<view class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url();">
+
+ <view class="section">
+    <view class="section__title">Search Here</view>
+    <input bindinput="searchInput" name="input" placeholder="please input here" />
+    <button bindtap="searchForm">Submit</button>
+  </view> 
+
+  <view class="container"></view>
 </view>
 <view class="divider"></view>
 <view class="row">
