--- a/pages/createhost/createhost.wxml
+++ b/pages/createhost/createhost.wxml
@@ -3,7 +3,7 @@
 <form bindsubmit="formSubmit" bindreset="formReset">
   <picker bindchange="bindPickerChange" value="{{array}}" range="{{array}}">
     <view class="picker">
-      Select a category：{{array[key]}}
+      Select your role：{{array[key]}}
     </view>
   </picker>
 <view class="picker-section">
@@ -19,7 +19,7 @@
     </view>
   </picker>
 </view>
-<view class="section3">
+<view class="picker-section">
 <input name="category" placeholder="Type in your category..." />
 </view>
 
@@ -30,13 +30,18 @@
     </view>
   </picker>
 </view>
-<view class="section5">
-<input name="age" placeholder="Type in your age..." />
+<view class="picker-section">
+<view class="section section_gap">
+  <text class="section__title"> set your age </text>
+  <view class="body-view">
+    <slider bindchange="slider4change" min="18" max="80" show-value/>
+  </view>
 </view>
-<view class="section6">
+</view>
+<view class="picker-section">
 <input name="url" placeholder="Type in your url..." />
 </view>
-<view class="section7">
+<view class="picker-section">
 <input name="image_url" placeholder="Type in your image url..." />
 </view>
 <view class="btn-area">
