--- a/pages/createhost/createhost.wxml
+++ b/pages/createhost/createhost.wxml
@@ -10,7 +10,7 @@
 <input name="name" placeholder="Type in your name..." />
 </view>
 <view class="picker-section">
-<input name="description" placeholder="Type in your description..." />
+<input name="description" placeholder="Describe yourself.." />
 </view>
 <view class="picker-section">
 <picker bindchange="bindPickerChange2" value="{{array2}}" range="{{array2}}">
@@ -24,14 +24,14 @@
 </view>
 
 <view class="picker-section">
-<radio-group name="radio-group">
-      <label><radio value="radio1"/>Male</label>
-      <label><radio value="radio2"/>Female</label>
-    </radio-group>
+ <checkbox-group name="checkbox">
+      <label><checkbox value="checkbox1"/>Female</label>
+      <label><checkbox value="checkbox2"/>Male</label>
+    </checkbox-group>
 </view>
 <view class="picker-section">
 <view class="section section_gap">
-  <text class="section__title"> set your age </text>
+  <text class="section__title"> Set your age </text>
   <view class="body-view">
     <slider bindchange="slider4change" min="18" max="80" show-value/>
   </view>
