--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,18 @@
-
+.p {
+  font-size:25rpx;
+}
+.h3 {
+  font-size:35rpx;
+}
+.h2 {
+  font-size:45rpx;
+}
+.avatar {
+  width: 75rpx;
+  height: 75rpx;
+  border-radius: 50%;
+  object-fit:cover;
+}
 .banner {
   background-color: white;
   background-size: cover;
