bookings-user-index

--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -1,2 +1,23 @@
 <!--pages/book/book.wxml-->
-<text>My Bookings...</text>
+<text class="page title">My Bookings</text>
+
+<view class="divider"></view>
+
+<view class="card">
+  <view class="card-blue">
+    <view class= "h4">Name</view>
+      <view class="name-bar">
+        <view class="p"> Name of family </view>
+      </view>
+    <view class="h4">Message</view>
+      <view class="message-bar">
+        <view class="p">Message to your grandmother </view>
+      </view>
+     <view class="delete">
+      <button plain="{{plain}}" type="warn" class="btn-red">Delete</button>
+      </view>
+      <view>
+    </view>
+  </view>
+</view>
+
