--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,20 +1,46 @@
 .p {
-  font-size:25rpx;
+  font-size:24rpx;
+  margin-top:8rpx;
+  padding-left: 32rpx;
+  padding-right: 32rpx ;
+  padding-bottom: 20rpx;
+  
 }
-.h3 {
-  font-size:35rpx;
+.p1 {
+  background-color: #F5F5F5;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size:24rpx;
+  padding-right: 32rpx ;
+  padding-top: 10rpx;
+  padding-bottom: 10rpx;
+  object-fit: cover;
+  
+}
+.h3  {
+  font-size:28rpx;
+  font-weight: bolder;
+  padding-left: 32rpx;
+  padding-bottom: 10rpx;
 }
 .h2 {
-  font-size:45rpx;
+  font-size:40rpx;
+  font-weight: bolder;
+  padding-left: 32rpx;
+  padding-bottom: 5rpx;
+  margin-top:8rpx;
 }
 .search-button {
   opacity:0.5;
 }
 .avatar {
-  width: 75rpx;
-  height: 75rpx;
-  border-radius: 50%;
-  object-fit:cover;
+  width: 100%;
+  height: 200rpx;
+  object-fit: cover;
+  background-position: top;
+  border-radius: 4px 4px 0px 0px;
+  
 }
 
 .banner-wrapper {
@@ -47,19 +73,21 @@
 }
 
 .card-product {
-  height:303rpx;
-  width: 252rpx;
-  background:rgb(250, 250, 250);
+  display: flex;
+  flex-direction: column;
+  width: 45vw;
+  background-color: white;
   box-shadow: 2rpx 2rpx 5rpx rgba(0,0,0,0.1);
-  justify-content: center;
-  padding: 16px;
-  margin: 8px;
+  justify-content: space-between;
   border-radius: 4px;
+  margin: 16rpx;
+  
 }
 .card-product-1 {
   height:303rpx;
   width: 252rpx;
   display: flex;
+  align-items: center;
   justify-content: flex-end;
   padding: 16px;
   margin: 8px;
