--- a/pages/createhost/createhost.wxml
+++ b/pages/createhost/createhost.wxml
@@ -1,48 +1,40 @@
 
 <view class="form">
 <form bindsubmit="formSubmit" bindreset="formReset">
-  <picker bindchange="bindPickerChange" value="{{array}}" range="{{array}}">
+  <picker bindchange="bindPickerChange" value="{{index}}" range="{{array}}">
     <view class="picker">
-      Select your role：{{array[key]}}
+      Select your role：{{array[index]}}
     </view>
   </picker>
-<view class="picker-section">
+
 <input name="name" placeholder="Type in your name..." />
-</view>
-<view class="picker-section">
+
 <input name="description" placeholder="Describe yourself.." />
-</view>
-<view class="picker-section">
-<picker bindchange="bindPickerChange2" value="{{array2}}" range="{{array2}}">
-    <view class="picker">
-      Select your location：{{array2[key]}}
-    </view>
-  </picker>
-</view>
-<view class="picker-section">
-<input name="category" placeholder="Type in your category..." />
-</view>
 
 <view class="picker-section">
- <checkbox-group name="checkbox">
-      <label><checkbox value="checkbox1"/>Female</label>
-      <label><checkbox value="checkbox2"/>Male</label>
-    </checkbox-group>
+<picker bindchange="bindPickerChange2" value="{{index2}}" range="{{array2}}">
+    <view class="picker">
+      Select your location：{{array2[index2]}}
+    </view>
+  </picker>
 </view>
-<view class="picker-section">
+
+ <checkbox-group name="gender">
+      <label><checkbox value="female"/>Female</label>
+      <label><checkbox value="male"/>Male</label>
+    </checkbox-group>
+
 <view class="section section_gap">
   <text class="section__title"> Set your age </text>
   <view class="body-view">
-    <slider bindchange="slider4change" min="18" max="80" show-value/>
+    <slider bindchange="slider4change" min="18" max="80" name="age" show-value/>
   </view>
 </view>
-</view>
-<view class="picker-section">
+
 <input name="url" placeholder="Type in your url..." />
-</view>
-<view class="picker-section">
+
 <input name="image_url" placeholder="Type in your image url..." />
-</view>
+
 <view class="btn-area">
 <button type="primary" form-type="submit">Submit</button>
 <button form-type="reset">Reset</button>
