--- a/pages/createhost/createhost.wxss
+++ b/pages/createhost/createhost.wxss
@@ -15,3 +15,12 @@
   .picker-section {
     margin: 20rpx 0;
   }
+  .box {
+    box-shadow: 1rpx 1rpx 2rpx 2rpx lightgray;
+    border-radius: 5%;
+    width: 25 rpx;
+  }
+  .checkbox {
+    display: flex;
+    justify-content: space-between;
+  }
