--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -1,16 +1,19 @@
 <!--pages/show/show.wxml-->
 <image class='img' src="{{host.url}}"></image>
-<view class="row">
-  <view class="host-card">
-    <view class='h2'>Hello!My name is {{host.name}}.</view>
-    <view class="p"> I am {{host.age}} years old.</view> 
-    <view class="p">{{host.description}}</view>  
-    <view class="p">Please consider renting me!</view>
-  
+  <view class="row">
+    <view class="host-card">
+      <view class="local">
+          <view class="h2">{{host.name}}</view>
+          <view class="p1">{{host.location}}</view>
+      </view>
+        <view class="p">{{host.age}}</view> 
+        <view class="description">{{host.description}}</view> 
+        <view></view>
+    </view>
   </view>
-</view>
-<view>Host's location</view>
+  <view class="button">
+    <button class="btn-orange" style="margin: 20rpx" data-id="{{host.id}}" plain="{{plain}}"  bindtap="goToCreateBooking">Book</button>
+  </view> 
 
 <map id="map" longitude="113.324520" latitude="23.099994" scale="14" controls="{{controls}}" bindcontroltap="controltap" markers="{{markers}}" bindmarkertap="markertap" polyline="{{polyline}}" bindregionchange="regionchange" show-location style="width: 90%; height: 200px;"></map>
-<button class="btn-orange" data-id="{{host.id}}" bindtap="goToCreateBooking">Book</button>
 
