--- a/pages/show/show.wxss
+++ b/pages/show/show.wxss
@@ -5,67 +5,57 @@
   width: 100vw;
   object-fit: cover;
 }
-
 .h2 {
-  font-size: 45rpx;
-  display: flex;
-  margin-top: 20rpx;
-  height: 80rpx;
-  padding-left :80rpx;
+  font-size: 40rpx;
 }
-.p {
-  font-size: 35rpx;
+.p1 {
+  background-color: rgb(255, 255, 255);
+  font-size: 32rpx;
+  border-radius: 8rpx;
+  padding: 10rpx;
 }
 .row {
   display: flex;
   justify-content: center;
 }
 
+.local {
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
 .host-card {
-background-color: rgba(200, 200, 200, 0.2);
+background-color:rgb(243, 243, 243);
 margin-top: 20rpx;
-padding:30rpx;
-height: 500rpx;
+padding: 40rpx;
+height: 400rpx;
 width: 80vw;
 border-radius: 8rpx;
 }
-/* 
-.bottom-navbar {
-  height: 120rpx;
-  border-top-style: solid;
-  border-color: whitesmoke;
-  background-color: white;
-  position: fixed;
-  bottom: 0;
-  width: 100vw;
-  display:flex;
-  justify-content: center;
-} */
-/* 
-.icon {
-  font-size: 14px;
-  display: inline-flex;
-  margin: 10px;
-  padding: 8px;
-  justify-content: center;
+
+.description {
+  margin-top: 60rpx;
+  margin-left: 20rpx;
 }
 
-.icon-center {
-  font-size: 14px;
-  display: inline-flex;
-  margin: 10px;
-  margin-left: 30px;
-  margin-right: 30px;
-  padding: 8px;
-  justify-content: center;
+#map {
+  margin: 0 auto;
+  margin-bottom: 80rpx;
 }
- */
-
-
-
 .btn-orange {
-  background-color: rgb(255, 188, 100);
+  background-color:rgb(255, 219, 8);
   color: white;
-  margin: 30rpx; 
+  text-shadow: 2rpx 2rpx 6rpx rgba(0, 0, 0,0.4);
+  margin-right: 30rpx;
+}
+
+
+.button {
+  width: 92vw;
+  display: inline-flex;
+  justify-content: flex-end;
+  margin: 40rpx;
 }
 
