--- a/pages/book/book.wxss
+++ b/pages/book/book.wxss
@@ -13,7 +13,8 @@
   align-items: center;
 }
 .card-blue {
-  background-color: lightskyblue;
+  background-color: #ececec;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   height: 550rpx;
   width: 90vw;
   border-radius: 8px;
@@ -45,5 +46,16 @@
   color: white;
   padding: 15rpx;
  
+
+}
+
+.card {
+  margin-top: 30rpx;
+}
+.h4 {
+  display: flex;
+  align-items: center;
+ margin-left: 20rpx;
+ margin-top: 10rpx;
 
 }
